updated the application.properties

--- a/notification-spring-boot-autoconfigure/src/main/resources/application.properties
+++ b/notification-spring-boot-autoconfigure/src/main/resources/application.properties
@@ -5,8 +5,8 @@ mail.protocol=smtp
 mail.host=smtp.googlemail.com
 mail.port=587
 mail.to=to
-mail.username=bsk7ksk@gmail.com
-mail.password=Naveen123
+mail.username=xxx@gmail.com
+mail.password=xxxx
 properties:
 	mail.smtp.auth=true
 	mail.smtp.starttls.enable=true
